--- a/src/pages/user/user.scss
+++ b/src/pages/user/user.scss
@@ -1,7 +1,7 @@
 page-user {
 
     p {
-        background:#fa0c01;
+        background: #4a8bfc;
         color:#fff;
         width:75px;
         height:75px;
