mudancas de layout na tela de login e user

--- a/src/pages/user/user.scss
+++ b/src/pages/user/user.scss
@@ -14,4 +14,12 @@ page-user {
         -webkit-border-radius:50%;
         }
 
+  #usuario-perfil {
+    text-align: right;
+  }  
+
+  #botaologout {
+      background-color: #FF0000
+  }
+
 }
