tela de lista de mensagem e post adicionada

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,3 +17,13 @@
     color:white;
     background-color: transparent;
 }
+
+.card-perfil {
+    border-radius: 10%;
+    background-color: #D3D3D3;
+  }
+
+  #data-perfil {
+    text-align: right;
+
+}
