alteracoes de layout e criacao de componente

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -27,3 +27,11 @@
     text-align: right;
 
 }
+
+.item-md ion-avatar ion-img,
+    .item-md ion-avatar img {
+      border-radius: 50%;
+      overflow: hidden;
+      width: 70px;
+      height: 70px;
+    }
