mudancas no layout na pagina de alterar foto e comunicacao com o servidor com o ultimo post

--- a/src/components/post/post.html
+++ b/src/components/post/post.html
@@ -6,11 +6,11 @@
 <button ion-item>
   <ion-card class="card-perfil">
       <ion-card-header>
-        {{titulo}}
+       <strong> {{titulo}}</strong>
       </ion-card-header>
-      <ion-card-content >
-        {{post}}
-        <h6 >{{data}}</h6>
+      <ion-card-content>
+          {{post}}
+        <h6 id="data" >{{autor}} {{data}}</h6>
       </ion-card-content>
     </ion-card>
   </button>
