--- a/src/components/post/post.html
+++ b/src/components/post/post.html
@@ -6,11 +6,11 @@
 <button ion-item>
   <ion-card class="card-perfil">
       <ion-card-header>
-       <strong> {{titulo}}</strong>
+       <strong> {{post.titulo}}</strong>
       </ion-card-header>
       <ion-card-content>
-          {{post}}
-        <h6 id="data" >{{autor}} {{data}}</h6>
+          {{post.post}}
+        <h6 id="data" >{{post.autor}} {{post.data}}</h6>
       </ion-card-content>
     </ion-card>
   </button>
