adicionado busca de mensagem e correcoes na data de post

--- a/src/components/post/post.html
+++ b/src/components/post/post.html
@@ -9,8 +9,8 @@
        <strong> {{post.titulo}}</strong>
       </ion-card-header>
       <ion-card-content>
-          {{post.post}}
-        <h6 id="data" >{{post.autor}} {{post.data}}</h6>
+          {{post.mensagem}}
+        <h6 id="data" >{{post.autor}} {{data}}</h6>
       </ion-card-content>
     </ion-card>
   </button>
