mudancas de layout na pagina de login, usuario e posts

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,9 +1,9 @@
 
 
 .toolbar-background-md {
-    color: #4a8bfc;
-    border-color:#4a8bfc;
-    background:#4a8bfc;
+    color: #3C69FF;
+    border-color:#3C69FF;
+    background:#3C69FF;
   }  
 
   .toolbar-title-md {
