--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -6,4 +6,16 @@ post {
     #ret{
         display: table-caption;
     }
+
+    #card{
+        background-color:#C0C0C0;
+        border-radius: 7%;
+        height: 120px;
+    }
+
+    .card-md p {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
 }
