--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -10,4 +10,9 @@ page-login {
       background-color: #FF8C00;
     }
 
+    .scroll-content {
+        display: inline;
+        top: 100px;
+    }
+
 }
