--- a/src/components/post/post.html
+++ b/src/components/post/post.html
@@ -3,14 +3,25 @@
 
 
 
-<button ion-item>
+<div id="card">
   <ion-card class="card-perfil">
-      <ion-card-header>
-       <strong> {{post.titulo}}</strong>
-      </ion-card-header>
-      <ion-card-content>
-          {{post.mensagem}}
-        <h6 id="data" >{{post.autor}} {{data}}</h6>
-      </ion-card-content>
-    </ion-card>
-  </button>
+    <ion-card-header>
+      <strong> {{post.titulo}}</strong>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        {{post.mensagem}}
+      </p>
+      <ion-row>
+        <ion-col>
+          {{post.autor}}
+        </ion-col>
+        <ion-col> </ion-col>
+        <ion-col id="data">
+          {{data}}
+        </ion-col>
+      </ion-row>
+
+    </ion-card-content>
+  </ion-card>
+</div>
