--- a/src/pages/user/user.scss
+++ b/src/pages/user/user.scss
@@ -25,6 +25,13 @@ page-user {
       top: 40px;
     }
 
+    #foto{
+      border-radius: 50%;
+      overflow: hidden;
+      width: 70px;
+      height: 70px;
+    }
+
   .button-block {
       position: relative;
       top: 25px;
