--- a/src/pages/user/user.scss
+++ b/src/pages/user/user.scss
@@ -10,6 +10,14 @@ page-user {
       
     }
 
+    #fotoavatar{
+      border-radius: 50%;
+      overflow: hidden;
+      width: 70px;
+      height: 70px;
+      text-align: center;
+    }
+
     h4:first-child {
       color: white;
       margin: 0 auto;
